CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(Dealer)

SET(DEALER_VERSION 0.8)
SET(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)

MESSAGE("-- prefix='${CMAKE_INSTALL_PREFIX}'")

ADD_CUSTOM_TARGET(perl_binding ALL
    COMMAND ${CMAKE_COMMAND} -E chdir ${PROJECT_BINARY_DIR}/perl perl Makefile.PL PREFIX=${CMAKE_INSTALL_PREFIX} LIB=${CMAKE_INSTALL_PREFIX}
    COMMAND ${CMAKE_COMMAND} -E chdir ${PROJECT_BINARY_DIR}/perl make clean
    COMMAND ${CMAKE_COMMAND} -E chdir ${PROJECT_BINARY_DIR}/perl perl Makefile.PL PREFIX=${CMAKE_INSTALL_PREFIX} LIB=${CMAKE_INSTALL_PREFIX}
    COMMAND ${CMAKE_COMMAND} -E chdir ${PROJECT_BINARY_DIR}/perl make
    COMMENT "Built perl binding.")

INSTALL(SCRIPT install_perl_module.cmake)